--- a/AreaCalculator/pom.xml
+++ b/AreaCalculator/pom.xml
@@ -14,5 +14,10 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.0.52-beta</version>
+        </dependency>
     </dependencies>
 </project>
